kubernetes/apps/flux-system/flux-instance/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.vaderrp.com"
spec:
  ingressClassName: external
  rules:
    - host: "flux-webhook.vaderrp.com"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
